spacing fixes

--- a/src/cv_page.scss
+++ b/src/cv_page.scss
@@ -317,7 +317,7 @@ footer {
 
   .side-card-header{
     font-weight: 600;
-    margin-bottom: 8px;
+    margin-bottom: 15px;
     font-size: 16px;
     display: flex;
     align-items: center;
